[package]
name = "iridium-blockchain"
version = "0.1.0"
authors = ["Gustorn <gustorn@gmail.com>"]

[lib]
name = "iridium"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
bincode = "0.8.0"
chrono = "0.4.0"
hex = "0.2.0"
itertools = "0.6.5"
rand = "0.4.2"
ring = "0.11.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
rocket_cors = "0.2.0"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
untrusted = "0.5.1"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
